test/syc/bad/structdupm.c
/*
 * Duplicate record member 'x'.
 */

struct foo {
	int x;
	int x;
} f;
